[package]
name = "interface_tap"
version = "0.1.0"
edition = "2021"

[build-dependencies]
libbpf-cargo = "0.24"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage"] }
libbpf-cargo = "0.24"
libbpf-rs = "0.24"
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["net"] }
